Removed the unneeded JSON data from parsing

--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -67,6 +67,7 @@
     let Arrivals = [];
 
     let FlightData = [[${flights}]];
+    console.log(FlightData);
 
     window.onload = function () {
         const departuresContainer = document.getElementById("departures");
