--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -14,18 +14,12 @@
 
         <div id="filterPanel" class="mt-4 bg-white p-4 rounded-lg shadow hidden">
             <div class="flex border-b">
-                <button class="tab-link px-4 py-2 text-gray-600 border-b-2 border-transparent focus:outline-none" data-tab="status">Staatus</button>
                 <button class="tab-link px-4 py-2 text-gray-600 border-b-2 border-transparent focus:outline-none" data-tab="departures">Väljumis Lennujaam</button>
                 <button class="tab-link px-4 py-2 text-gray-600 border-b-2 border-transparent focus:outline-none" data-tab="arrivals">Jõudmis Lennujaam</button>
             </div>
 
             <input type="text" id="FilterSearchInput" class="w-full p-2 border rounded mt-3" placeholder="Otsi...">
 
-            <div class="tab-content mt-3" id="status">
-                <label class="block"><input type="checkbox" class="filter-option" value="scheduled"> Scheduled</label>
-                <label class="block"><input type="checkbox" class="filter-option" value="delayed"> Delayed</label>
-                <label class="block"><input type="checkbox" class="filter-option" value="cancelled"> Cancelled</label>
-            </div>
 
             <div class="tab-content mt-3 hidden" id="departures">
                 <!-- Departured siin -->
@@ -42,18 +36,15 @@
             <thead>
             <tr class="bg-gray-200 text-gray-700">
                 <th class="px-6 py-3 text-left">Lennuaeg</th>
-                <th class="px-6 py-3 text-left">Lennu Staatus</th>
                 <th class="px-6 py-3 text-left">Väljumis Lennujaam</th>
                 <th class="px-6 py-3 text-left">Jõudmis Lennujaam</th>
             </tr>
             </thead>
             <tbody id="flightTable">
             <tr th:each="flight : ${flights}" class="border-b flight-row"
-                th:data-status="${flight.flight_status}"
                 th:data-departure="${flight.departure.airport}"
                 th:data-arrival="${flight.arrival.airport}">
                 <td th:text="${flight.flight_date}" class="px-6 py-3 text-gray-700"></td>
-                <td th:text="${flight.flight_status}" class="px-6 py-3 text-gray-700"></td>
                 <td th:text="${flight.departure.airport}" class="px-6 py-3 text-gray-700"></td>
                 <td th:text="${flight.arrival.airport}" class="px-6 py-3 text-gray-700"></td>
             </tr>
@@ -144,15 +135,10 @@
         document.querySelectorAll('.filter-option').forEach(option => {
             option.addEventListener('change', function() {
                 let selectedFilters = {
-                    status: [],
                     departure: [],
                     arrival: []
                 };
 
-                let StatusFilterOptions = document.querySelectorAll('#status .filter-option:checked');
-                StatusFilterOptions.forEach(cb => {
-                    selectedFilters.status.push(cb.value);
-                });
 
                 let DepartureFilterOptions = document.querySelectorAll('#departures .filter-option:checked');
                 DepartureFilterOptions.forEach(cb => {
@@ -165,15 +151,13 @@
                 });
 
                 document.querySelectorAll('.flight-row').forEach(row => {
-                    let flightStatus = row.getAttribute('data-status');
                     let departureAirport = row.getAttribute('data-departure');
                     let arrivalAirport = row.getAttribute('data-arrival');
 
-                    let mStatus = selectedFilters.status.length === 0 || selectedFilters.status.includes(flightStatus);
                     let mDeparture = selectedFilters.departure.length === 0 || selectedFilters.departure.includes(departureAirport);
                     let mArrival = selectedFilters.arrival.length === 0 || selectedFilters.arrival.includes(arrivalAirport);
 
-                    if (mStatus && mDeparture && mArrival) {
+                    if (mDeparture && mArrival) {
                         row.style.display = '';
                     } else {
                         row.style.display = 'none';
