Made the booking endpoint work, added seat suggestions. Added server side seat generation. Polished and refactored the code.

--- a/src/main/resources/static/Booking.css
+++ b/src/main/resources/static/Booking.css
@@ -10,6 +10,18 @@ html {
   max-width: 300px;
 }
 
+.row.business {
+  background-color: #FFD700;
+}
+
+.row.premium {
+  background-color: #C0C0C0;
+}
+
+.row.economy {
+  background-color: #B0E0E6;
+}
+
 .cockpit {
   height: 250px;
   position: relative;
