--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -69,6 +69,7 @@
     let Departures = [];
     let Arrivals = [];
     let FlightData = [[${flights}]];
+    console.log(FlightData);
 
     window.onload = function () {
         const departuresContainer = document.getElementById("departures");
