--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viga</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-$END$
+
+<div class="grid h-screen place-content-center bg-white px-4 dark:bg-gray-900">
+    <h1 class="uppercase tracking-widest text-gray-500 dark:text-gray-400">404 | Ei leitud</h1>
+</div>
+
+<!-- 404 Page found from the internet https://www.hyperui.dev/components/application-ui/error-pages -->
+
 </body>
 </html>
